[package]
name = "tracing"
version = "0.1.0"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.3", features = ["serde"] }
indextree = "1.0.1"
libc = "0.2.21"
log = "0.3.6"
nix = "0.8.1"
serde = "1.0.8"
serde_json = "1.0.2"
spawn-ptrace = "0.1"

[features]
ci = []
